# environments

./: .gitignore  .mergify.yml  CLAUDE.md  MULTI_ARCH_COMPATIBLITY.md  Makefile  README.md  environments.json  kind.yaml  nodejs.yaml  python.yaml  rules.mk  skaffold.yaml
.claude/resources/: build-and-images.md  ci.md  environment-notes.md  (+2 more)
.github/: environment.yaml  filters.yaml  image.yaml
binary/: Dockerfile  Makefile  README.md  envconfig.json  server.go
bun/: Dockerfile  Makefile  README.md  bun.lockb  envconfig.json  package.json  server.ts
dotnet/: Makefile  README.md  envconfig.json  fission-dotnet.csproj
dotnet20/: Dockerfile  Makefile  README.md  envconfig.json  fission-dotnet20.csproj
dotnet60/: Dockerfile  Dockerfile.builder  README.md  fission-dotnet6.sln
dotnet8/: .gitignore  Dockerfile  FissionDotnet.sln  Makefile  README.md  envconfig.json
environments-ui/: merge-json.sh  netlify.toml  package-lock.json  package.json  webpack.config.js
go/: Dockerfile-1.12  Dockerfile-1.16  Dockerfile-1.1x  Dockerfile-buster-1.13  Makefile  README.md  envconfig.json  go.mod  server.go
hack/: buildx.sh  merge-json.sh  release.sh  release_check.py  sort-json.sh
jvm/: Dockerfile  Dockerfile-11  Makefile  README.md  envconfig.json  install-fission-java-core.sh  pom.xml
jvm-11/: Makefile
jvm-jersey/: Dockerfile  Dockerfile-11  Makefile  README.md  envconfig.json  pom.xml
nodejs/: Dockerfile  Dockerfile-12.16  Dockerfile-14.16  Dockerfile-debian  Dockerfile-kali  Makefile  README.md  envconfig.json  package-lock.json  package.json  server.js
nodejs22/: Makefile  README.md  envconfig.json  package-lock.json  server.js
perl/: Dockerfile  Makefile  README.md  envconfig.json  server.pl
php7/: Dockerfile  Makefile  README.md  composer.json  envconfig.json  server.php
python/: Dockerfile  Dockerfile-2.7  Dockerfile-buster  Dockerfile-kali  Makefile  README.md  envconfig.json  flask_sockets.py  requirements.txt  server.py  socket_tracker.py
python-fastapi/: Dockerfile  Makefile  README.md  envconfig.json  requirements.txt  server.py
ruby/: Dockerfile  Gemfile  Makefile  README.md  envconfig.json
rust/: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  envconfig.json  server.go
rust/builder/: Dockerfile  Makefile  build.sh
rust/examples/: README.md
rust/examples/hello-world/: Cargo.toml
rust/examples/hello-world/specs/: env.yaml  fission-deployment-config.yaml  function-hello.yaml
rust/examples/hello-world/src/: main.rs
rust/examples/project-example/src/: main.rs
rust/fission-rust/: Cargo.toml
rust/fission-rust/src/: lib.rs
rust/fission-rust/tests/: port.rs
rust/supervisor/: Cargo.toml
rust/supervisor/src/: lib.rs  main.rs
rust/supervisor/tests/: supervisor.rs
rust/template/: Cargo.toml
rust/template/src/: handler.rs  main.rs
rust/test/: local_test.sh
rust/tests/: test_rust_env.sh
tensorflow-serving/: Dockerfile  Makefile  envconfig.json  server.go
test_utils/: run_test.sh  utils.sh
(+210 files in other folders)
