[package]
name = "fission-rust"
version = "0.1.0"
description = "Runtime SDK for writing Fission functions in Rust"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "fission_rust"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { version = "0.6", features = ["catch-panic"] }
